2010-07-20  Ingo Renner  <ingo.renner@dkd.de>

	* Changed solrconfig.xml so that spellchecker dictionaries are built on OPTIMIZE
	* Added spellcheck.collate=true when using spellchecking
	* Changed the spellcheck form modifier to use the collation suggestions returned by Solr

2010-07-19  Ingo Renner  <ingo.renner@dkd.de>

	* Added a missing file indicator.gif for the jQuery autcomplete plugin which caused 404s
	* Added TYPO3 as a protected word in protwords.txt
	* Fixed issue #8620: automatic loading of all necessary Javascript for suggestions if activated

2010-07-19  Markus Goldbach <markus.goldbach@dkd.de>

	* Moved Solr schema.xml and solrconfig.xml into EXT:solr/resources/solr/singlecore/

2010-07-16  Ingo Renner  <ingo.renner@dkd.de>

	* Changed extension status to stable

2010-07-13  Ingo Renner  <ingo.renner@dkd.de>

	* Changed solrconfig.xml. Minor tweaks for Solr admin and removed unused cache warming queries

2010-07-12  Ingo Renner  <ingo.renner@dkd.de>

	* Added loading of TCA in eID suggest script to prevent issues with failing suggestions, credits Markus Kleinhenz

2010-07-09  Ingo Renner  <ingo.renner@dkd.de>

	* Added missing styling for the relevance bar view helper

2010-07-02  Ingo Renner  <ingo.renner@dkd.de>

	* Updated the install script to get Solr 1.4.1

2010-06-25  Ingo Renner  <ingo.renner@dkd.de>

	* Added Solr icons to the Solr reports in the reports module

2010-06-23  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #8060: Page title defined twice in tx_solr_Indexer, credits Marc Bastian Heinrichs
	* Added feature #8466: Add a TypoScript view helper
	* Updated ext_emconf.php
	* Release of v1.1.0

2010-06-22  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issues #8162 and #8316, usage of deprecated APIs, credits Marc Bastian Heinrichs
	* Added a COMMIT scheduler task, credits Georg Kuehnberger
	* Fixed issue #8118: Autosuggest replacement only works when search term is lower case, credits Michael Telgkamp