@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!-- $Id: schema.xml 64337 2010-07-19 11:49:37Z dkd-renner $ -->
+<!-- $Id: schema.xml 64431 2010-07-20 15:04:52Z dkd-goldbach $ -->
 
 <!--
 	This is the Solr schema file. This file should be named "schema.xml"
@@ -20,7 +20,7 @@
 	status report - tx_solr_report_SchemaStatus - checking against this
 	name property, that status check must be updated as well.
 -->
-<schema name="tx_solr-1-4-0--20100531" version="1.1">
+<schema name="tx_solr-1-4-0--20100720" version="1.1">
 	<!--
 		attribute "name" is the name of this schema and is only used for
 		display purposes. Applications should change this to reflect the
@@ -33,17 +33,17 @@
 
 	<types>
 		<!-- field type definitions. The "name" attribute is
-			 just a label to be used by field definitions.	The "class"
-			 attribute and any other attributes determine the real
-			 behavior of the fieldType.
-				 Class names starting with "solr" refer to java classes in the
-			 org.apache.solr.analysis package.
+			just a label to be used by field definitions.	The "class"
+			attribute and any other attributes determine the real
+			behavior of the fieldType.
+				Class names starting with "solr" refer to java classes in the
+			org.apache.solr.analysis package.
 		-->
 
 		<!-- The StrField type is not analyzed, but indexed/stored verbatim.
-			 - StrField and TextField support an optional compressThreshold which
-			 limits compression (if enabled in the derived fields) to values which
-			 exceed a certain size (in characters).
+			- StrField and TextField support an optional compressThreshold which
+			limits compression (if enabled in the derived fields) to values which
+			exceed a certain size (in characters).
 		-->
 		<fieldType name="string"  class="solr.StrField"  sortMissingLast="true" omitNorms="true"/>
 
@@ -51,22 +51,22 @@
 		<fieldType name="boolean" class="solr.BoolField" sortMissingLast="true" omitNorms="true"/>
 
 		<!-- The optional sortMissingLast and sortMissingFirst attributes are
-				 currently supported on types that are sorted internally as strings.
-			 - If sortMissingLast="true", then a sort on this field will cause documents
-				 without the field to come after documents with the field,
-				 regardless of the requested sort order (asc or desc).
-			 - If sortMissingFirst="true", then a sort on this field will cause documents
-				 without the field to come before documents with the field,
-				 regardless of the requested sort order.
-			 - If sortMissingLast="false" and sortMissingFirst="false" (the default),
-				 then default lucene sorting will be used which places docs without the
-				 field first in an ascending sort and last in a descending sort.
+				currently supported on types that are sorted internally as strings.
+			- If sortMissingLast="true", then a sort on this field will cause documents
+				without the field to come after documents with the field,
+				regardless of the requested sort order (asc or desc).
+			- If sortMissingFirst="true", then a sort on this field will cause documents
+				without the field to come before documents with the field,
+				regardless of the requested sort order.
+			- If sortMissingLast="false" and sortMissingFirst="false" (the default),
+				then default lucene sorting will be used which places docs without the
+				field first in an ascending sort and last in a descending sort.
 		-->
 
 
 		<!-- numeric field types that store and index the text
-			 value verbatim (and hence don't support range queries, since the
-			 lexicographic ordering isn't equal to the numeric ordering) -->
+			value verbatim (and hence don't support range queries, since the
+			lexicographic ordering isn't equal to the numeric ordering) -->
 		<fieldType name="integer" class="solr.IntField"    omitNorms="true"/>
 		<fieldType name="long"    class="solr.LongField"   omitNorms="true"/>
 		<fieldType name="float"   class="solr.FloatField"  omitNorms="true"/>
@@ -74,9 +74,9 @@
 
 
 		<!-- Numeric field types that manipulate the value into
-			 a string value that isn't human-readable in its internal form,
-			 but with a lexicographic ordering the same as the numeric ordering,
-			 so that range queries work correctly. -->
+			a string value that isn't human-readable in its internal form,
+			but with a lexicographic ordering the same as the numeric ordering,
+			so that range queries work correctly. -->
 		<fieldType name="sint"    class="solr.SortableIntField"    sortMissingLast="true" omitNorms="true"/>
 		<fieldType name="slong"   class="solr.SortableLongField"   sortMissingLast="true" omitNorms="true"/>
 		<fieldType name="sfloat"  class="solr.SortableFloatField"  sortMissingLast="true" omitNorms="true"/>
@@ -84,24 +84,24 @@
 
 
 		<!-- The format for this date field is of the form 1995-12-31T23:59:59Z, and
-			 is a more restricted form of the canonical representation of dateTime
-			 http://www.w3.org/TR/xmlschema-2/#dateTime
-			 The trailing "Z" designates UTC time and is mandatory.
-			 Optional fractional seconds are allowed: 1995-12-31T23:59:59.999Z
-			 All other components are mandatory.
+			is a more restricted form of the canonical representation of dateTime
+			http://www.w3.org/TR/xmlschema-2/#dateTime
+			The trailing "Z" designates UTC time and is mandatory.
+			Optional fractional seconds are allowed: 1995-12-31T23:59:59.999Z
+			All other components are mandatory.
 
-			 Expressions can also be used to denote calculations that should be
-			 performed relative to "NOW" to determine the value, ie...
+			Expressions can also be used to denote calculations that should be
+			performed relative to "NOW" to determine the value, ie...
 
-			 NOW/HOUR
+			NOW/HOUR
 				... Round to the start of the current hour
-			 NOW-1DAY
+			NOW-1DAY
 				... Exactly 1 day prior to now
-			 NOW/DAY+6MONTHS+3DAYS
+			NOW/DAY+6MONTHS+3DAYS
 				... 6 months and 3 days in the future from the start of
 					the current day
 
-			 Consult the DateField javadocs for more information.
+			Consult the DateField javadocs for more information.
 			-->
 		<fieldType name="date" class="solr.DateField" sortMissingLast="true" omitNorms="true"/>
 
@@ -119,7 +119,7 @@
 
 			Note that if you use a precisionStep of 32 for int/float and 64 for long/double, then multiple terms
 			will not be generated, and range search will be no faster than any other number field.
-		 -->
+		-->
 		<fieldType name="tint"     class="solr.TrieField" type="integer" omitNorms="true" positionIncrementGap="0" indexed="true" stored="false" />
 		<fieldType name="tfloat"   class="solr.TrieField" type="float"   omitNorms="true" positionIncrementGap="0" indexed="true" stored="false" />
 		<fieldType name="tlong"    class="solr.TrieField" type="long"    omitNorms="true" positionIncrementGap="0" indexed="true" stored="false" />
@@ -135,32 +135,32 @@
 
 
 		<!-- The "RandomSortField" is not used to store or search any
-			 data.	You can declare fields of this type in your schema
-			 to generate psuedo-random orderings of your docs for sorting
-			 purposes.	The ordering is generated based on the field name
-			 and the version of the index, As long as the index version
-			 remains unchanged, and the same field name is reused,
-			 the ordering of the docs will be consistent.
-			 If you want differend psuedo-random orderings of documents,
-			 for the same version of the index, use a dynamicField and
-			 change the name
-		 -->
+			data.	You can declare fields of this type in your schema
+			to generate psuedo-random orderings of your docs for sorting
+			purposes.	The ordering is generated based on the field name
+			and the version of the index, As long as the index version
+			remains unchanged, and the same field name is reused,
+			the ordering of the docs will be consistent.
+			If you want differend psuedo-random orderings of documents,
+			for the same version of the index, use a dynamicField and
+			change the name
+		-->
 		<fieldType name="random" class="solr.RandomSortField" indexed="true" />
 
 		<!-- solr.TextField allows the specification of custom text analyzers
-			 specified as a tokenizer and a list of token filters. Different
-			 analyzers may be specified for indexing and querying.
+			specified as a tokenizer and a list of token filters. Different
+			analyzers may be specified for indexing and querying.
 
-			 The optional positionIncrementGap puts space between multiple fields of
-			 this type on the same document, with the purpose of preventing false phrase
-			 matching across fields.
+			The optional positionIncrementGap puts space between multiple fields of
+			this type on the same document, with the purpose of preventing false phrase
+			matching across fields.
 
-			 For more info on customizing your analyzer chain, please see
-			 http://wiki.apache.org/solr/AnalyzersTokenizersTokenFilters
-		 -->
+			For more info on customizing your analyzer chain, please see
+			http://wiki.apache.org/solr/AnalyzersTokenizersTokenFilters
+		-->
 
 		<!-- One can also specify an existing Analyzer class that has a
-			 default constructor via the class attribute on the analyzer element
+			default constructor via the class attribute on the analyzer element
 		<fieldType name="text_greek" class="solr.TextField">
 			<analyzer class="org.apache.lucene.analysis.el.GreekAnalyzer"/>
 		</fieldType>
@@ -198,7 +198,7 @@
 				<filter class="solr.WordDelimiterFilterFactory" generateWordParts="1" generateNumberParts="1" catenateWords="0" catenateNumbers="0" catenateAll="0" splitOnCaseChange="1" preserveOriginal="1"/>
 				<!--
 				best practice (currently) for synonyms is to add them by expansions during index time
-	 			<filter class="solr.SynonymFilterFactory" synonyms="synonyms.txt" ignoreCase="true" expand="true"/>
+				<filter class="solr.SynonymFilterFactory" synonyms="synonyms.txt" ignoreCase="true" expand="true"/>
 				-->
 				<filter class="solr.StopFilterFactory"
 						ignoreCase="true"
@@ -213,7 +213,7 @@
 
 
 		<!-- Less flexible matching, but less false matches.	Probably not ideal for product names,
-			 but may be good for SKUs.	Can insert dashes in the wrong place and still match. -->
+			but may be good for SKUs.	Can insert dashes in the wrong place and still match. -->
 		<fieldType name="textTight" class="solr.TextField" positionIncrementGap="100" >
 			<analyzer>
 				<tokenizer class="solr.WhitespaceTokenizerFactory"/>
@@ -227,16 +227,23 @@
 			</analyzer>
 		</fieldType>
 
-		<!--
-		 Setup simple analysis for spell checking
-		 -->
-		<fieldType name="textSpell" class="solr.TextField" positionIncrementGap="100" >
-			<analyzer>
+		<!-- Setup simple analysis for spell checking -->
+		<fieldType name="textSpell" class="solr.TextField" positionIncrementGap="100" omitNorms="true">
+			<analyzer type="index">
 				<tokenizer class="solr.StandardTokenizerFactory"/>
 
-				<filter class="solr.StopFilterFactory" ignoreCase="true" words="stopwords.txt"/>
-				<filter class="solr.LengthFilterFactory" min="4" max="20" />
 				<filter class="solr.LowerCaseFilterFactory"/>
+				<filter class="solr.SynonymFilterFactory" synonyms="synonyms.txt" ignoreCase="true" expand="true"/>
+				<filter class="solr.StopFilterFactory" ignoreCase="true" words="stopwords.txt"/>
+				<filter class="solr.StandardFilterFactory" />
+				<filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
+			</analyzer>
+			<analyzer type="query">
+				<tokenizer class="solr.StandardTokenizerFactory" />
+
+				<filter class="solr.LowerCaseFilterFactory"/>
+				<filter class="solr.StopFilterFactory" ignoreCase="true" words="stopwords.txt"/>
+				<filter class="solr.StandardFilterFactory" />
 				<filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
 			</analyzer>
 		</fieldType>
@@ -262,32 +269,32 @@
 		-->
 
 		<!-- This is an example of using the KeywordTokenizer along
-			 With various TokenFilterFactories to produce a sortable field
-			 that does not include some properties of the source text
+			With various TokenFilterFactories to produce a sortable field
+			that does not include some properties of the source text
 		-->
 		<fieldType name="textSort" class="solr.TextField" sortMissingLast="true" omitNorms="true">
 			<analyzer>
 				<!-- KeywordTokenizer does no actual tokenizing, so the entire
-					 input string is preserved as a single token
+					input string is preserved as a single token
 				-->
 				<tokenizer class="solr.KeywordTokenizerFactory"/>
 
 				<!-- The LowerCase TokenFilter does what you expect, which can be
-					 when you want your sorting to be case insensitive
+					when you want your sorting to be case insensitive
 				-->
 				<filter class="solr.LowerCaseFilterFactory" />
 				<!-- The TrimFilter removes any leading or trailing whitespace -->
 				<filter class="solr.TrimFilterFactory" />
 				<!-- The PatternReplaceFilter gives you the flexibility to use
-					 Java Regular expression to replace any sequence of characters
-					 matching a pattern with an arbitrary replacement string,
-					 which may include back refrences to portions of the orriginal
-					 string matched by the pattern.
+					Java Regular expression to replace any sequence of characters
+					matching a pattern with an arbitrary replacement string,
+					which may include back refrences to portions of the orriginal
+					string matched by the pattern.
 
-					 See the Java Regular Expression documentation for more
-					 infomation on pattern and replacement string syntax.
+					See the Java Regular Expression documentation for more
+					infomation on pattern and replacement string syntax.
 
-					 http://java.sun.com/j2se/1.5.0/docs/api/java/util/regex/package-summary.html
+					http://java.sun.com/j2se/1.5.0/docs/api/java/util/regex/package-summary.html
 
 				<filter class="solr.PatternReplaceFilterFactory"
 						pattern="(^\p{Punct}+)" replacement="" replace="all"
@@ -306,8 +313,8 @@
 
 
 		<!-- since fields of this type are by default not stored or indexed, any data added to
-			 them will be ignored outright
-		 -->
+			them will be ignored outright
+		-->
 		<fieldtype name="ignored" stored="false" indexed="false" class="solr.StrField" />
 
 	</types>
@@ -420,7 +427,7 @@
 		<!--
 			Used to build the spellchecker index
 		-->
-		<field name="spell" type="textSpell" indexed="true" stored="true" multiValued="true" />
+		<field name="spell" type="textSpell" indexed="true"  stored="false" multiValued="true" />
 		<copyField source="title"    dest="spell" />
 		<copyField source="subTitle" dest="spell" />
 		<copyField source="content"  dest="spell" />
