@@ -1,3 +1,7 @@
+2010-07-20  Markus Goldbach  <markus.goldbach@dkd.de>
+
+	* Changed the default schema.xml for mulitcore and singelcore, the spell field's content is not stored anymore
+
 2010-07-20  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Changed solrconfig.xml so that spellchecker dictionaries are built on OPTIMIZE
